sab -  added more content

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -257,14 +257,11 @@
 
 				<h2>FINAL THOUGHTS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>At the time I left the company, they were in talks for doing the first two pilot deployments. I later
+					had the chance of using the service in one of the secured locations and it was a nice and rewarding experience.
+					Since then, they have deployed in multiple locations from Romania and the Middle East.
+				</p>
+
 
 
 				<div id="disqus_thread"></div>
