parking plus - optimized video loading

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -198,7 +198,7 @@
 
 				<div class="gallery">
 					<div class="gallery2 left_image with_border">
-						<video id="interaction1" preload="metadata" width="100%">
+						<video id="interaction1" preload="none" width="100%" poster="img/parkingplus/video/1.poster.png">
 							<source src="img/parkingplus/video/1.map-interactions.mp4" type="video/mp4">
 						</video>
 
@@ -208,7 +208,7 @@
 					</div>
 
 					<div class="gallery2 right_image with_border">
-						<video id="interaction2" preload="metadata" width="100%">
+						<video id="interaction2" preload="none" width="100%" poster="img/parkingplus/video/3.poster.png">
 							<source src="img/parkingplus/video/3.map%20interactions%20-%20private%20area%20busy%20waiting.mp4" type="video/mp4">
 						</video>
 
@@ -220,7 +220,7 @@
 
 				<div class="gallery">
 					<div class="gallery2 left_image with_border">
-						<video id="interaction3" preload="metadata" width="100%">
+						<video id="interaction3" preload="none" width="100%" poster="img/parkingplus/video/6.poster.png">
 							<source src="img/parkingplus/video/6.parking%20suggestions.mp4" type="video/mp4">
 						</video>
 
@@ -230,7 +230,7 @@
 					</div>
 
 					<div class="gallery2 right_image with_border">
-						<video id="interaction4" preload="metadata" width="100%">
+						<video id="interaction4" preload="none" width="100%" poster="img/parkingplus/video/7.poster.png">
 							<source src="img/parkingplus/video/7.find%20my%20car.avi.mp4" type="video/mp4">
 						</video>
 
