--- a/parking_plus.html
+++ b/parking_plus.html
@@ -15,29 +15,17 @@
 
 		<title>Parking Plus</title>
 
-		<script type="text/javascript" src="js/video.js"></script>
-
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-		<!-- Add mousewheel plugin (this is optional) -->
-		<script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-
-		<!-- Add fancyBox -->
-		<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-
-		<!-- Optionally add helpers - button, thumbnail and/or media -->
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 
 		<link rel="stylesheet" href="style/fancybox_styling.css"/>
 
-        <script type="text/javascript" src="js/menu_utils.js"></script>
+		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="js/menu_utils.js"></script>
+		<script type="text/javascript" src="js/video.js"></script>
 
 		<!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
 		<script>
@@ -67,28 +55,11 @@
         </script>
 
 		<script type="text/javascript">
-			$(document).ready(function() {
-				console.log( "ready!" );
-				$(".fancybox").fancybox({
-					helpers : {
-						title: {
-							type: 'outside',
-							position: 'bottom'
-						},
-						overlay : {
-							css : {
-								'background' : 'rgba(70, 70, 70, 0.90)'
-							}
-						}
-					},
-					nextEffect: 'fade',
-					prevEffect: 'fade',
-					padding : 0,
-					margin : [20, 60, 20, 60] // Increase left/right margin
-				});
-			});
+            $(document).ready(function() {
+                //apply fancybox options
+                $("[data-fancybox]").fancybox(fancyboxOptions);
 
-            $(document).ready(function () {
+                //init navigation framework
                 $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html");
             });
@@ -124,7 +95,11 @@
 				of what's out there and where we stand with the current prototype.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/competitive_analysis_small.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/competitive_analysis_small.png" alt="" /></a>
+					<a data-fancybox="competitors"
+					   data-caption="Collection of parking applications that were part of the research."
+					   href="img/parkingplus/competitive_analysis_small.png">
+						<img class="gallery1" src="img/parkingplus/competitive_analysis_small.png"/>
+					</a>
 				</div>
 
 				<p>A lot of competitors were pointing to parking lots on a map, some of them were showing street parking as well,
@@ -148,13 +123,21 @@
 				<p>Next you can see a driver parking in a private garage and paying on the fly</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/storyboard1.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/storyboard1.png" alt="" /></a>
+					<a data-fancybox="storyboards"
+					   data-caption="Finding and using a private garage."
+					   href="img/parkingplus/storyboard1.png">
+						<img class="gallery1" src="img/parkingplus/storyboard1.png"/>
+					</a>
 				</div>
 
 				<p>and a driver accessing a previously booked garage.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/storyboard2.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/storyboard2.png" alt="" /></a>
+					<a data-fancybox="storyboards"
+					   data-caption="Using a parking booking."
+					   href="img/parkingplus/storyboard2.png">
+						<img class="gallery1" src="img/parkingplus/storyboard2.png"/>
+					</a>
 				</div>
 
 				<h2>THE MOBILE APP</h2>
@@ -170,17 +153,37 @@
 					poorly designed in the first prototype, like parking availability and suggestions and covered missing
 					screens, like the introductory tutorial.</p>
 
-				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid1.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid2.png" alt="" /></a>
-				</div>
+                <div class="gallery">
+                    <a data-fancybox="mobile" class="needsBorder"
+                       data-caption="Sketches for parking suggestions, mobile bookings and payments."
+                       href="img/parkingplus/A4%204x8%20grid1.png">
+                        <img class="gallery2 left_image with_border" src="img/parkingplus/A4%204x8%20grid1.png"/>
+                    </a>
+                    <a data-fancybox="mobile" class="needsBorder"
+                       data-caption="Sketches for iOS navigation and the driver tutorial."
+                       href="img/parkingplus/A4%204x8%20grid2.png">
+                        <img class="gallery2 right_image with_border" src="img/parkingplus/A4%204x8%20grid2.png"/>
+                    </a>
+                </div>
 
 				<h3>ANDROID MOBILE SCREENS</h3>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/1.map.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/1.map.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/2.private%20parking.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/2.private%20parking.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/3.payments.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/3.payments.png" alt="" /></a>
+					<a data-fancybox="mobile" class="needsBorder"
+                       data-caption="Home screen showing a map with parking availability and the primary driver actions."
+                       href="img/parkingplus/1.map.png">
+                        <img class="gallery3 left_image with_border" src="img/parkingplus/1.map.png"/>
+                    </a>
+					<a data-fancybox="mobile" class="needsBorder"
+                       data-caption="Street parking details screen with information about availability, price and a primary navigation action."
+                       href="img/parkingplus/2.private%20parking.png">
+                        <img class="gallery3 center_image with_border" src="img/parkingplus/2.private%20parking.png"/>
+                    </a>
+					<a data-fancybox="mobile" class="needsBorder"
+                       data-caption="Payments screen with a playful dial interaction to set the parking time and pay."
+                       href="img/parkingplus/3.payments.png">
+                        <img class="gallery3 right_image with_border" src="img/parkingplus/3.payments.png"/>
+                    </a>
 				</div>
 
 				<p>These are just part of the tens of screens that were refined. Some other screens can be seen in the
@@ -256,8 +259,16 @@
 					them in order to find suitable visualizations.</p>
 
 				<div class="gallery">
-				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_1.png" alt="" /></a>
-				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_2.png" alt="" /></a>
+				<a data-fancybox="admin" class="needsBorder"
+                   data-caption="Sketches for an administration dashboard - part 1"
+                   href="img/parkingplus/admin_dashboard_sketch_1.png">
+                    <img class="gallery2 left_image with_border" src="img/parkingplus/admin_dashboard_sketch_1.png"/>
+                </a>
+				<a data-fancybox="admin" class="needsBorder"
+                   data-caption="Sketches for an administration dashboard - part 2"
+                   href="img/parkingplus/admin_dashboard_sketch_2.png">
+                    <img class="gallery2 right_image with_border" src="img/parkingplus/admin_dashboard_sketch_2.png"/>
+                </a>
 				</div>
 
 				<p>After sketching multiple ideas, I picked the ones that made the most sense and moved to Photoshop for
@@ -265,7 +276,11 @@
 					it because it was not scalable enough.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/admin_dashboard.png" alt="" /></a>
+					<a data-fancybox="admin" class="needsBorder"
+                       data-caption="Visual design proposal with an interactive visualization for the state of the system."
+                       href="img/parkingplus/admin_dashboard.png">
+                        <img class="gallery1" src="img/parkingplus/admin_dashboard.png"/>
+                    </a>
 				</div>
 
 				<p>My second proposal was the one that got implemented and it was similar in terms of layout with the image above,
@@ -283,9 +298,21 @@
 					</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_1.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_1.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_2.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_2.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_3.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_3.png" alt="" /></a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="Sketches for a catalog and a brochure."
+					   href="img/parkingplus/marketing_sketch_1.png">
+						<img class="gallery3 left_image with_border" src="img/parkingplus/marketing_sketch_1.png"/>
+					</a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="Sketches for a catalog and a brochure."
+					   href="img/parkingplus/marketing_sketch_2.png">
+						<img class="gallery3 center_image with_border" src="img/parkingplus/marketing_sketch_2.png"/>
+					</a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="Sketches for a catalog and a brochure."
+					   href="img/parkingplus/marketing_sketch_3.png">
+						<img class="gallery3 right_image with_border" src="img/parkingplus/marketing_sketch_3.png"/>
+					</a>
 				</div>
 
 				<p>This is the version that got printed and it was the result of our team work. I contributed with writing the copy,
@@ -294,14 +321,30 @@
 
 				<h3>THE CATALOG</h3>
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%201.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%202.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%202.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%203.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%203.png" alt="" /></a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="Printed version of the catalog."
+					   href="img/parkingplus/catalog%201.png">
+						<img class="gallery3 left_image with_border" src="img/parkingplus/catalog%201.png"/>
+					</a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="Printed version of the catalog."
+					   href="img/parkingplus/catalog%202.png">
+						<img class="gallery3 center_image with_border" src="img/parkingplus/catalog%202.png"/>
+					</a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="OPrinted version of the catalog."
+					   href="img/parkingplus/catalog%203.png">
+						<img class="gallery3 right_image with_border" src="img/parkingplus/catalog%203.png"/>
+					</a>
 				</div>
 
 				<h3>THE BROCHURE</h3>
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/flyer.png"><img class="gallery1 with_border" id="function_candidates_1" src="img/parkingplus/flyer.png" alt="" /></a>
+					<a data-fancybox="marketing" class="needsBorder"
+					   data-caption="Printed version of the brochure."
+					   href="img/parkingplus/flyer.png">
+						<img class="gallery1 with_border" src="img/parkingplus/flyer.png"/>
+					</a>
 				</div>
 
 				<h3>THE EXPLAINER VIDEO</h3>
